--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-.wrapper{
-    
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 20px;
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* ⛔ запрещаем горизонтальную прокрутку */
+}
+
+.slide-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  transition: transform 0.4s ease;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+    transform: scale(0.9);
+}
+
+.swiper-slide-active .slide-image {
+  transform: scale(1);
+  z-index: 2;
 }
