--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   object-fit: cover;
   border-radius: 10px;
   transition: transform 0.4s ease;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); */
     transform: scale(0.9);
 }
 
@@ -17,4 +17,3 @@
   transform: scale(1);
   z-index: 2;
 }
-
